<resources>
    <string name="app_name">Day10</string>
    <string name="nasi_goreng">Nasi Goreng</string>
    <string name="mie_goreng">Mie Goreng</string>
    <string name="mie_rebus">Mie Rebus</string>
    <string name="nasi_uduk">Nasi Uduk</string>
    <string name="jumlah_porsi">Jumlah Porsi</string>
    <string name="pesan">Pesan</string>
    <string name="teh_es">Teh Es</string>
    <string name="es_jeruk">Es Jeruk</string>
</resources>